# DFT-Visualizer

./: .gitmodules  CMakeLists.txt  README.md  info.plist
include/: Consts.hpp  DFT.hpp  Drawing.hpp  FileUpload.hpp  Lines.hpp  Menu.hpp  Point.hpp  RoundedRectangleShape.hpp  Signal.hpp  ViewportHandler.hpp  consts.hpp  point.hpp
release/: DFTv1  DFTv2
src/: coordinator.csv  main.cpp
